--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,11 +7,11 @@ output:
     keep_md: true
 ---
 
-## Introduction: Why are we here?
-This is the first assignment for the Reproducible Research Course which is part of the Johns Hopkins University Data Science Specialization hosted on Coursera. The purpose of this assignment will be to demonstrate the ability to utilize R markdown files and the knitr process to transform the explanation and display of the R code for the exploration of data into a 'human readable' format. To accomplish this goal, the assignment utilizes activity monitoring data collected on personal digital devices. The dataset we will explore is a CSV file with a total of 17,568 observations (according to the assignment prompt), but we will only be examining a subset of the data from October and November 2012.
+## <b>Introduction: Why are we here?</b>
+This is the first assignment for the Reproducible Research Course which is part of the Johns Hopkins University Data Science Specialization hosted on Coursera. The purpose of this assignment will be to demonstrate the ability to utilize R markdown files and the knitr process to transform the explanation and display of the R code for the exploration of data into a 'human readable' format. To accomplish this goal, the assignment utilizes activity monitoring data collected on personal digital devices. The dataset we will explore is a CSV file with a total of 17,568 observations (according to the assignment prompt) of activity step counts per 5 minute intervals, from October and November 2012.
 
 
-## Step 0 - Loading and preprocessing the data
+## <b>Prompt 0 - Loading and preprocessing the data</b>
 In order to prepare the data, we will preload the R packages for use in this project, download the data from the URL provided in the assignment prompt, unzip the data file, and read the file into memory.
 
 #### Step 0.1 - Load the R Packages Required for this Assignment
@@ -45,18 +45,51 @@ if(!file.exists(SourceDest)) {
 #### Step 0.5 - Read the Source Data
 ```{r,echo=TRUE}
 activityData <- read.csv("activity.csv")
+
+```
+#### Step 0.6 - Format the Dates into date format
+```{r,echo=TRUE}
+activityData$date <- as.Date(activityData$date,format="%Y-%m-%d")
 ```
 
-## Step 1 - What is mean total number of steps taken per day?
+#### Step 0.7 - Confirm the structure of the data
+```{r, echo=TRUE}
+head(activityData)
+summary(activityData)
+```
+
+## <b>Prompt 1 - What is mean total number of steps taken per day?</b>
+
+### Prompt 1-1: Calculate the total number of steps taken per day
+First, we need to create a new variable 'dailyTotalSteps' in which to store the summary table of daily total steps.
+```{r,echo=TRUE}
+#dailyTotalSteps <- tapply(activityData$steps,activityData$date,sum,na.rm=TRUE)
+dailyTotalSteps <- activityData %>% group_by(date) %>% summarise(dailySteps=sum(steps))
+```
+Next, we want to display the head of the new variable to verify we achieved the correct transformation.
+```{r,echo=TRUE}
+head(dailyTotalSteps)
+```
+
+### Prompt 1-2: If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day
+```{r,echo=TRUE}
+hist(dailyTotalSteps$dailySteps,main = "Histogram: Daily Total Steps Measured October-November 2012",xlab = "Total Daily Steps",ylab="Frequency (# of Days)")
+```
+
+### Prompt 1-3: Calculate and report the mean and median of the total number of steps taken per day
+For an easy calculation of the mean and median of total daily steps taken, we can use the summary function:
+```{r,echo=TRUE}
+summary(dailyTotalSteps)
+```
+### <b style="color:#117A65"><i>Answer: Mean daily steps is 10766. Median daily steps is 10765.</i></b>
+
+## Prompt 2 - What is the average daily activity pattern?
 
 
 
-## Step 2 - What is the average daily activity pattern?
+## Prompt 3 - Inputing missing values
 
 
 
-## Step 3 - Inputing missing values
+## Prompt 4 - Are there differences in activity patterns between weekdays and weekends?
 
-
-
-## Step 4 - Are there differences in activity patterns between weekdays and weekends?
